# tech-challenge-4-grupo-29

./: .gitignore  Dockerfile  README.md  data_stream_simulator.py  diarization.py  gradio-app-2.py  gradio-app.py  main.py  pyproject.toml  test_main.py  whisper.py  whisperOpenAI.py
data/: Laudo Médico.docx  Receituários.docx  stream.txt
experiments/: gradio-app-3.py  main.py  stream_emocional.py
nginx/: nginx.conf
src/: main.py  notifier.py
src/analyzers/: __init__.py  audio.py  sensor.py  text.py  video.py
src/ui/: __init__.py  charts.py
tests/: test_audio_analyzer.py  test_main.py  test_text_analyzer.py
