[project]
name = "tech-challenge-4-grupo-29"
version = "0.1.0"
description = "Project for the tech challenge 4 for pos-fiap-6IADT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.99",
    "google-genai>=1.66.0",
    "gradio>=6.5.1",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "opencv-python>=4.13.0.92",
    "plotly>=6.5.2",
    "soundfile>=0.13.1",
    "tf-keras>=2.20.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "taskipy>=1.14.1",
]
[tool.taskipy.tasks]
start="PYTHONPATH=. uv run python src/main.py"
test="pytest"
test-coverage="pytest --cov=src --cov-report=term-missing tests/"

[tool.pytest.ini_options]
pythonpath = ["."]
